# Awtrix-GUI

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: check.bat
src/: config.rs  customapp.rs  main.rs
src/ui/: custom.rs  device.rs  mod.rs  screen.rs  settings.rs  status.rs  statusbar.rs
