[package]
name = "awtrix-gui"
version = "0.1.0"
edition = "2021"
description = "A GUI for the awtrix clock."

[package.metadata.bundle]
name = "AwtrixGUI"
identifier = "bircni.AwtrixGUI"
icon = [
    "./../res/mac-icons/icon_16x16.png",
    "./../res/mac-icons/icon_32x32.png",
    "./../res/mac-icons/icon_128x128.png",
    "./../res/mac-icons/icon_256x256.png",
    "./../res/mac-icons/icon_16x16@2x.png",
    "./../res/mac-icons/icon_32x32@2x.png",
    "./../res/mac-icons/icon_128x128@2x.png",
]
version = "0.1.0"
resources = ["./../res/mac-icons/icon*.png"]
copyright = "© 2024 bircni"
short_description = "A GUI for the awtrix clock."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.86"
# Networking
reqwest = { version = "0.12.5", features = ["blocking"] }
# Parsing
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
semver = "1.0.23"
# GUI
eframe = "0.28.1"
egui = "0.28.1"
egui-notify = "0.15.0"
egui_extras = { version = "0.28.1", features = ["syntect", "image"] }
image = "0.25.2"
open = "5.3.0"
parking_lot = "0.12.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
unwrap_used = { level = "deny", priority = 10 }
expect_used = { level = "deny", priority = 11 }
