[package]
name = "awtrix-gui"
version = "0.1.0-beta.1"
edition = "2021"
description = "A GUI for the awtrix clock."
authors = ["bircni"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bircni/Awtrix-GUI"
keywords = ["awtrix", "gui", "clock", "display", "iot", "embedded"]
categories = ["gui", "hardware-interfaces", "network-programming", "iot"]

[package.metadata.bundle]
name = "AwtrixGUI"
identifier = "bircni.AwtrixGUI"
icon = [
    "./../res/mac-icons/icon_16x16.png",
    "./../res/mac-icons/icon_32x32.png",
    "./../res/mac-icons/icon_128x128.png",
    "./../res/mac-icons/icon_256x256.png",
    "./../res/mac-icons/icon_16x16@2x.png",
    "./../res/mac-icons/icon_32x32@2x.png",
    "./../res/mac-icons/icon_128x128@2x.png",
]
version = "0.1.0"
resources = ["./../res/mac-icons/icon*.png"]
copyright = "© 2024 bircni"
short_description = "A GUI for the awtrix clock."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
# egui-notify = { git = "https://github.com/ItsEthra/egui-notify", branch = "master" }

[dependencies]
# Error handling
anyhow = "1.0.89"
# Networking
reqwest = { version = "0.12.8", features = ["blocking"] }
# Parsing
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
semver = "1.0.23"
# GUI
eframe = "0.29.1"
egui = "0.29.1"
egui-notify = "0.16.0"
egui_extras = { version = "0.29.1", features = ["syntect", "image"] }
image = "0.25.2"
open = "5.3.0"
parking_lot = "0.12.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
perf = { level = "deny", priority = 3 }
style = { level = "deny", priority = 4 }
unwrap_used = { level = "deny", priority = 5 }
expect_used = { level = "deny", priority = 6 }
module_name_repetitions = { level = "allow", priority = 7 }
cast_precision_loss = { level = "allow", priority = 8 }
cast_possible_truncation = { level = "allow", priority = 9 }
cast_sign_loss = { level = "allow", priority = 10 }
out_of_bounds_indexing = { level = "allow", priority = 11 }
